--- a/package.json
+++ b/package.json
@@ -131,6 +131,7 @@
     "locate-path": "^5.0.0",
     "math-intrinsics": "^1.1.0",
     "math.js": "^1.1.46",
+    "mathjs": "^14.5.3",
     "media-typer": "^0.3.0",
     "memfs": "^4.17.2",
     "merge-descriptors": "^1.0.3",
