--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "jest-worker": "^27.5.1",
     "json-parse-even-better-errors": "^2.3.1",
     "json-schema-traverse": "^1.0.0",
+    "katex": "^0.16.22",
     "kind-of": "^6.0.3",
     "launch-editor": "^2.10.0",
     "loader-runner": "^4.3.0",
