--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
     "launch-editor": "^2.10.0",
     "loader-runner": "^4.3.0",
     "locate-path": "^5.0.0",
+    "marchingsquares": "^1.3.3",
     "math-intrinsics": "^1.1.0",
     "math.js": "^1.1.46",
     "mathjs": "^14.5.3",
